--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Vojtěch Kačmařík, Personal Blog
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Vojtěch Kačmařík!</h1>
+	<p>This is my official personal blog to share something with you. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
